Generate bindings file for agent_input and agent_output